[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manage-beamline"
version = "0.0.1"
authors = [{ name="Lucas Malin", email="lukemalin@gmail.com" }]
description = "Python class managing the settings and running an IMPACT-T beamline"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
	"impact_t_beamline",
	"beamline_configuration",
	"impact_input",
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/lm314/manage-beamline"
"Bug Tracker" = "https://github.com/lm314/manage-beamline/issues"
